<resources>
    <string name="app_name">Navigationdrawer</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Drawer Opened</string>
    <string name="drawer_close">Drawer Closed</string>
    <string name="item1">Item #1</string>
    <string name="item2">Item #2</string>
    <string name="item3">Item #3</string>
    <string name="item4">Item #4</string>
    <string name="item5">Item #5</string>
    <string name="item6">Item #6</string>
    <string name="navHeader">Navigation View Header</string>
</resources>
